.gitignore, README.md 同步更新

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,37 @@
+# 忽略所有文件夹下 build 目录及其子文件
+build
+dist
+.idea
+venv
+__pycache__
+
+.dep.inc
+# 删除之后需要手动写Makefile, 暂不删除
+# nbproject
+#
+# 使用 CMakeLists.txt 构建项目
+CMakeCache.txt
+CMakeFiles
+cmake_install.cmake
+compile_commands.json
+Makefile
+nbproject
+
+
+# 忽略所有目录下的.svn文件夹及其文件
+.idea
+.svn
+vendor
+
+# 忽略所有目录下的log文件夹下的内容
+log/*
+
+# 忽略当前目录下的pkg文件夹及其子文件
+/pkg/*
+/src/*
+
+
+
 # Prerequisites
 *.d
 
